Fixed the white space between buttons

--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ li.selected {
  ********************/
 #tab-bar {
     background-color: white;
+    white-space: nowrap;
 }
 
 #tab-bar button {
@@ -87,14 +88,15 @@ li.selected {
     font-size: 13px;
     width: 33%;
     height: 72px;
-    padding-bottom: 16px;
+    padding: 16px;
 }
 
 
 #tab-bar button.selected {
     color: blue;
+    width: 33%;
     border-bottom: 4px;
-    border-bottom-style: solid;    
+    border-bottom-style: solid;
 }
 
 #tab-bar img {
